src/objects/Extentia_SIM__MP_Map_Point__c.object
<CustomObject>
    <fields>
        <fullName>Extentia_SIM__Account_Id_For_Contact__c</fullName>
        <label>Account Id For Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__AddressKey__c</fullName>
        <externalId>true</externalId>
        <label>AddressKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Entity__c</fullName>
        <label>Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__GeoCode_Precision__c</fullName>
        <label>GeoCode Precision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__IsInsert__c</fullName>
        <label>IsInsert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__RecordID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>RecordID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extentia_SIM__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MP_Map_Point</label>
    <nameField>
        <label>MP_Map_Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MP_Map_Point</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>